--- a/dandisets/001037/001037.ipynb
+++ b/dandisets/001037/001037.ipynb
@@ -112,6 +112,7 @@
     "ax.yaxis.set_label_text('Normalized activity in rSLDS latent factors')\n",
     "ax.xaxis.set_label_text('Time (s)')\n",
     "ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
