--- a/dandisets/001037/001037.ipynb
+++ b/dandisets/001037/001037.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook reproduces Figure 1d in [Causal evidence of a line attractor encoding an affective state](https://www.nature.com/articles/s41586-024-07915-x) using data from [Dandiset 001037](https://dandiarchive.org/dandiset/001037?search=001037&pos=1)."
+    "This notebook reproduces Figure 1d in [Causal evidence of a line attractor encoding an affective state](https://www.nature.com/articles/s41586-024-07915-x) using data from [Dandiset 001037](https://dandiarchive.org/dandiset/001037?search=001037&pos=1).\n",
+    "\n",
+    "It is intended to be ingested by Neurosift AI assistant.\n",
+    "\n",
+    "Pip requirements:\n",
+    "lindi\n",
+    "pynwb\n",
+    "matplotlib"
    ]
   },
   {
