--- a/dandisets/000582/000582.ipynb
+++ b/dandisets/000582/000582.ipynb
@@ -50,8 +50,7 @@
    "outputs": [],
    "source": [
     "# Load the NWB file with pynapple\n",
-    "nwbp = nap.NWBFile(nwb)\n",
-    "print(nwbp)"
+    "nwbp = nap.NWBFile(nwb)"
    ]
   },
   {
@@ -66,6 +65,17 @@
     "print(f'Number of units: {len(units)}')\n",
     "print(f'Number of position samples: {len(position)}')\n",
     "print(f'Number of position dimensions: {position.shape[1]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes to AI assistant:\n",
+    "\n",
+    "If the number of dimensions is greater than 2, then you cannot use the compute_2d_tuning_curve function. If the user is requesting to use it in this situation, you should reply that it is not possible unless they want to restrict to two of the dimensions.\n",
+    "\n",
+    "If the number of dimensions is 1, then you should use the compute_1d_tuning_curve function instead, and of course the plots would be 1D graphs rather than images."
    ]
   },
   {
@@ -88,6 +98,15 @@
     "import seaborn as sns\n",
     "custom_params = {\"axes.spines.right\": False, \"axes.spines.top\": False}\n",
     "sns.set_theme(style=\"ticks\", palette=\"colorblind\", font_scale=1.5, rc=custom_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes to AI assistant:\n",
+    "\n",
+    "The number of rows and columns in the below figure should be adjusted according to the number of units. And if the number of units is very large, then the entire analysis should be restricted to a manageable subset of units."
    ]
   },
   {
