--- a/dandisets/000582/000582.ipynb
+++ b/dandisets/000582/000582.ipynb
@@ -73,9 +73,9 @@
    "source": [
     "Notes to AI assistant:\n",
     "\n",
-    "If the number of dimensions is greater than 2, then you cannot use the compute_2d_tuning_curve function. If the user is requesting to use it in this situation, you should reply that it is not possible unless they want to restrict to two of the dimensions. But this should not be determined programmatically in the script, because you should already know the number of dimensions from the data in the NWB file.\n",
+    "If the number of spatial dimensions is greater than 2, then you cannot use the compute_2d_tuning_curve function. If the user is requesting to use it in this situation, you should reply that it is not possible unless they want to restrict to two of the dimensions. But this should not be determined programmatically in the script, because you should know the number of spatial dimensions from the shape of the data in the NWB file.\n",
     "\n",
-    "If the number of dimensions is 1, then you should use the compute_1d_tuning_curve function instead, and of course the plots would be 1D graphs rather than images."
+    "If the number of spatial dimensions is 1, then you should use the compute_1d_tuning_curve function instead, and of course the plots would be 1D graphs rather than images."
    ]
   },
   {
